--- a/src/sass/forms.scss
+++ b/src/sass/forms.scss
@@ -14,7 +14,9 @@
 	transition: all .3s;
 	line-height: 1;
 
-	font-family: $mainFontFamily;
+	font-family: $hangy;
+	font-weight: 700;
+	font-style: italic;
 
 	cursor: pointer;
 
@@ -38,11 +40,32 @@
 		}
 	}
 
+	&--orange{
+		background: $orange;
+		color: #fff;
+		&:hover{
+			background: lighten($orange, 5%);
+		}
+		&:active{
+			background: darken($orange, 5%);
+		}
+	}
+
+	&--green{
+		background: $green;
+		color: #fff;
+		&:hover{
+			background: lighten($green, 5%);
+		}
+		&:active{
+			background: darken($green, 5%);
+		}
+	}
+
 	&--m{
-		border-radius: 8px;
-		font-weight: 700;
-		font-size: 12px;
-		padding: 8px 20px 8px;
+		border-radius: 25px;
+		font-size: 22px;
+		padding: 12px 35px 13px;
 	}
 
 	&--l{
