--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: 'PT Sans';
-    src: url('../fonts/PT_Sans-Web-Regular.woff.woff') format('woff');
+    src: url('../fonts/PT_Sans-Web-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
