--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,8 @@
 @import "global";
 @import "forms";
 @import "main";
+@import "comments";
+@import "app";
 @import "helpers";
 
 /* @media only screen and (min-width: 740px){
