--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -79,3 +79,107 @@
     from {transform:rotate(0deg);}
     to {transform:rotate(360deg);}
 }
+
+/* ==========================================================================
+ * app-quiz
+ * ========================================================================== */
+
+.app-quiz{
+	
+	text-align: center;		
+	
+	&__title{
+		text-align: center;
+		font-size: 45px;
+		color: #000;
+		font-family: $hangy;
+		font-style: italic;
+		font-weight: 700;
+		margin: 0 0 20px;
+	}
+
+	&__text{
+		text-align: center;
+		margin: 0 0 40px;
+	}
+
+	&__button-placeholder{
+		text-align: center;
+	}
+
+	&__question{
+		text-align: left;
+	}
+
+	&__answer{		
+		min-height: 400px;
+		display: flex;
+		flex-flow: column;
+		justify-content: center;
+		align-items: center;
+	}
+}
+
+.app-quiz-question{
+
+	&__count{
+		font-size: 22px;
+		font-family: $hangy;
+		margin: 0 0 10px;
+	}
+
+	&__title{
+		text-align: left;
+		font-size: 25px;
+	}
+
+	&__answers{
+		margin: 0 0 50px;
+	}
+
+	&__answer{
+		padding: 20px 0;
+		position: relative;
+		&:after{
+			content: '';
+			height: 1px;
+			position: absolute;
+			bottom: 0;
+			right: 0;
+			left: 0;
+			background: linear-gradient(to right, #fff 0%, #767676 50%, #fff 100%);
+		}
+	}
+}
+
+.app-quiz-radio{
+
+	&__input{
+		position: absolute;
+		left: -9999px;
+
+		&:checked + .app-quiz-radio__text:before{
+			background: $orange;
+			box-shadow: inset 0 0 0 4px #fff;
+		}
+	}
+
+	&__text{
+		display: block;
+		font-size: 22px;
+		padding: 0 0 0 74px;
+		position: relative;
+		line-height: 36px;
+
+		&:before{
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 36px;
+			height: 36px;
+			border: 3px solid $orange;
+			border-radius: 50%;
+		}
+	}
+}
